--- a/_hwk/h01.md
+++ b/_hwk/h01.md
@@ -1,11 +1,12 @@
 ---
-num: "h01"
+num: "h01-a"
 desc: "Chapter 1.1, 2.1-2.2"
 ready: true
 assigned: 2018-01-22 09:00:00.00-8:00
 due: 2018-01-29 09:00:00.00-8:00
 ---
 Reading: Read Chapter 1.1, 2.1-2.2.   If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve".
+
 
 <ol markdown="1">
 
@@ -39,5 +40,5 @@ Reading: Read Chapter 1.1, 2.1-2.2.   If you don't have a copy of the textbook y
 7.  (4 pts) Modify the definition of the throttle ADT on page 35, to create a new throttle ADT, which models a throttle as having a lever to control the flow of fuel (as before), and a light that indicates if the fuel flow is above or below a threshold. The light is green if the fuel flow is below 70%, and red otherwise. The new throttle ADT should have appropriate member functions to check on the status of the light. You do not have to implement the entire ADT, just the class definition.
   <div style="margin-bottom:10em"></div>
 
-
+8. (50 pts) Complete the [CS16 final exam](CS16-Spring17 FinalExam.pdf) 
 </ol>
