--- a/_pa/pa01.md
+++ b/_pa/pa01.md
@@ -11,14 +11,19 @@ due: 2018-02-08 23:59:00.00-7
 
 PA1 must be done individually - each student must accomplish it alone and submit it. Later assignments may allow students to work in pairs	, but not this assignment.
 
-## Create a pa01 directory and obtain the starter code
+## Create a git repo and obtain the starter code
 
-* Create a directory names pa1 in your cs24 directory on CSIL.
+* Create a git repo named pa01_your_github_username in our class organization.
 
-* Change into that directory and obtain the starter code by typing the following command
+* Clone your repo on CSIL in your home directory.
+
+* Get the starter code : If you have already cloned the `cs24-w18-lab-starter-code`
+change into it and type `git pull` to get the latest starter code.
+
+* Change into your repo directory and obtain copy the starter code by typing the following command
 
 ```
-cp ~/cs24/starter-code/pa01/* ./
+cp ~/cs24/cs24-w18-lab-starter-code/pa01/* ./
 
 ```
 
@@ -36,7 +41,10 @@ Complete stats.cxx to implement class statistician as it is defined in the stats
 
 * Compile and test your program at CSIL (by connecting remotely is okay).
 
-* Use the interactive test program: stattest.cxx. Here is the quickest way to compile it along with your stats.cxx, and link them together to an executable named stattest:
+* Push your code to github often. When you think it is ready for feedback from your mentor push it 
+with the commit message "Ready for feedback". 
+
+* Use the interactive test program: stattest.cxx. Here is the quickest way to compile it along with your stats.cxx, and link them together to an executable named stattest but we highly recommend that you write your own Makefile:
 
 ```
 g++ -o stattest stattest.cxx stats.cxx
@@ -47,7 +55,7 @@ The point of this interactive test program is for you to test your functions ind
 * Submit PA1 at https://submit.cs.ucsb.edu/, or use the following command from a CS terminal:
 
 ```
-~submit/submit -p 694 stats.cxx
+~submit/submit -p 942 stats.cxx
 ```
 
-Be sure to wait for the results of all tests. If you score 100/100, and you've followed all of the other rules, then you'll earn full credit.
+Be sure to wait for the results of all tests. If you score 100/100, and you've followed all of the other rules, then you'll earn full credit. 
