--- a/_hwk/h03.md
+++ b/_hwk/h03.md
@@ -1,6 +1,6 @@
 ---
 num: "h03"
-desc: "Chapter 3, section 3.1 -3.3"
+desc: "Chapter 3, section 3.1, Chapter 4"
 ready: true
 assigned: 2018-02-05 09:00:00.00-8:00
 due: 2018-02-12 09:00:00.00-8:00
@@ -9,24 +9,44 @@ due: 2018-02-12 09:00:00.00-8:00
 Complete your reading of Chapter 3, section 3.1- 3.3   (If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve").
 
 <ol markdown="1">
-1. (3 pts) What are three key operations that can be performed on the bag class? Explain what each operation achieves.
+1. (10 pts) What is the output of the following code:
+
+<div markdown="1">
+```
+int *p, *q;
+int x;
+p = &x;
+q = new int;
+*p = 50;
+*q = 60;
+cout << *p << " and "   << *q << endl;
+p = q;
+cout << *p << " and "  <<  *q << endl;
+*p = 30;
+cout << *p << " and " << *q << endl;
+*q = 40;
+cout << *p << " and " << *q << endl;
+delete p;
+delete q;
+```
+
 <div style="margin-bottom:8em"></div>
 
-2. (2 pts) What is the fundamental difference between the bag container class and the ADTs covered in Chapter2 ?
+2. (2 pts) 
 <div style="margin-bottom:8em"></div>
 
-3. (2 pts) Which statement in the definition of the bag class, when modified, allows a user to create a bag containing elements of any datatype?
+3. (2 pts) 
 <div style="margin-bottom:4em"></div>
 
-4. (2 pts) What is the rationale behind defining the bag's CAPACITY as a const static public member variable. Justify all those attributes.
+4. (2 pts) .
 <div style="margin-bottom:4em"></div>
 
 
 <div class="pagebreak"></div>
 
-5. (8 pts) What is the bug in the code provided in Figure 3.7 (implementation of the += operator). Provide the correct code below.
+5. (8 pts) 
 <div style="margin-bottom:30em"></div>
 
-6. (3 pts) Complete as many of the self-test exercises for section 3.1 and 3.2 as you can. Check your answers with those provided in the book. Then, write your favorite exercise (and the solution) below:
+6. (3 pts)
 <div style="margin-bottom:10em"></div>
 </ol>
